little bit changes in task1

--- a/day1-task/index.html
+++ b/day1-task/index.html
@@ -5,17 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio-task1</title>
         <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
     <body>
         <header>
             <nav role="navigation">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#blog">Blogs</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#about-section">about</a></li>
+                    <li><a href="#blog-section">blogs</a></li>
+                    <li><a href="#contact-section">contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -51,9 +50,9 @@
             </article>
             <hr>
 
-            <section id="about-section about">
+            <section id="about-section">
                 <h3>About Me</h3>
-                <p>Hi, i am a Web Developer.
+                <p>Hi, It's me Biraj and currently worked as a Web Developer. 
                     I have a good experience in MERN Stack(Mongodb, Expressjs,
                     Nodejs, Nodejs), Figma UI designing, python (django) and
                     databases.
@@ -101,7 +100,7 @@
             </section>
             <hr>
 
-            <section id="blog-section blog">
+            <section id="blog-section">
                 <h3>My Blogs </h3>
                 <div class="box">
                     <img src="./images/img1.png" alt="image">
@@ -127,11 +126,10 @@
                         sequi sit eligendi explicabo.</p>
                     <button class="btn">learn more</button>
                 </div>
-
             </section>
             <hr>
 
-            <section id="contact-section contact">
+            <section id="contact-section">
 
                 <form role="form">
                     <h3>Contact Me</h3>
