--- a/day1-task/index.html
+++ b/day1-task/index.html
@@ -1,161 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio-task1</title>
-        <link rel="stylesheet" href="./style.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio-task1</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav role="navigation">
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#about-section">about</a></li>
+        <li><a href="#blog-section">blogs</a></li>
+        <li><a href="#contact-section">contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    </head>
-    <body>
-        <header>
-            <nav role="navigation">
-                <ul>
-                    <li><a href="#">home</a></li>
-                    <li><a href="#about-section">about</a></li>
-                    <li><a href="#blog-section">blogs</a></li>
-                    <li><a href="#contact-section">contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main role="main">
-            <article id="home-section">
-                <h2> Hello, Everyone!<br />Welcome to my Website.</h2>
+  <main role="main">
+    <article id="home-section">
+      <h2>Hello Everyone,<br />Welcome to My Portfolio</h2>
+      <img src="./images/img.png" alt="Profile picture" />
+      <p>Hi, I'm <strong>Biraj</strong> — a passionate and dedicated individual striving to make an impact through creativity and technology.</p>
+    </article>
+    <hr />
 
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Adipisci sequi dicta, recusandae, earum suscipit asperiores
-                    quas
-                    nulla reprehenderit necessitatibus, magni natus molestiae
-                    quos
-                    perspiciatis quod. Aliquam, distinctio blanditiis? Aliquam
-                    ab
-                    voluptatibus laboriosam sint dolore vel maxime quidem quos!
-                    Iusto asperiores blanditiis distinctio aliquam cupiditate
-                    unde
-                    repellendus, exercitationem fugit nisi, corrupti architecto
-                    eveniet voluptate omnis esse ratione tempora vitae nobis.
-                    Veritatis quos facilis nisi consequuntur id expedita maiores
-                    quibusdam magni perspiciatis ipsam ad neque pariatur
-                    voluptates
-                    dolores explicabo architecto odit, cupiditate rerum. Dolores
-                    velit quibusdam itaque, alias veniam, rerum, dolorem
-                    corporis
-                    eligendi cumque eos adipisci numquam aperiam eaque eum!
-                    Aliquid,
-                    praesentium.
-                </p>
-                <button class="btn1">Learn more</button>
-                <button class="btn2" id="contact">Hire me</button>
-            </article>
-            <hr>
+    <section id="about-section">
+      <h3>About Me</h3>
+      <p>
+        Hello! I'm <strong>Biraj</strong>, a highly motivated and detail-oriented <strong>Full Stack Web Developer</strong> with hands-on experience in both frontend and backend technologies. <br /><br />
+        I specialize in the <strong>MERN Stack</strong> — <em>MongoDB, Express.js, React.js, and Node.js</em> — and have successfully built dynamic, responsive, and scalable web applications. In addition, I work with <strong>Python (Django)</strong> for building robust backend systems and RESTful APIs. <br /><br />
+        I also have a strong passion for user interface design and prototyping, with practical knowledge of <strong>Figma</strong> for creating clean and user-centric designs. My understanding of databases extends to both SQL and NoSQL solutions, making me a versatile developer for any kind of project. <br /><br />
+        Whether you're looking for a committed freelancer to join your team, or you're someone trying to break into the tech industry and need personalized guidance, I’m here to help. <br /><br />
+        <strong>Let’s collaborate and bring your ideas to life!</strong>
+      </p>
 
-            <section id="about-section">
-                <h3>About Me</h3>
-                <p>Hi, It's me Biraj and currently worked as a Web Developer. 
-                    I have a good experience in MERN Stack(Mongodb, Expressjs,
-                    Nodejs, Nodejs), Figma UI designing, python (django) and
-                    databases.
-                    If you need some freelancer as a partner in your team you
-                    can contact me.
-                    If you want to learn something related with IT you can
-                    consult me.
-                </p>
+      <div class="button-container">
+        <button class="btn1">Learn More</button>
+        <button class="btn2" id="contact">Hire Me</button>
+      </div>
 
-                <hr>
-                <table>
-                    <tr>
-                        <th>Sno</th>
-                        <th>MyProjects</th>
-                        <th>Frameworks used</th>
-                        <th>Completed Date</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Learning Management System</td>
-                        <td>Django+Reactjs</td>
-                        <td>02/10/2025</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Food Delivery App</td>
-                        <td>MERN</td>
-                        <td>07/11/2024</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>E-commerce Website</td>
-                        <td>MERN</td>
-                        <td>09/17/2024</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>News Website</td>
-                        <td>Nextjs</td>
-                        <td>01/13/2025</td>
-                    </tr>
-                </table>
+      <hr />
+      <table>
+        <tr>
+          <th>Sno</th>
+          <th>My Projects</th>
+          <th>Frameworks used</th>
+          <th>Completed Date</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Learning Management System</td>
+          <td>Django+Reactjs</td>
+          <td>02/10/2025</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Food Delivery App</td>
+          <td>MERN</td>
+          <td>07/11/2024</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>E-commerce Website</td>
+          <td>MERN</td>
+          <td>09/17/2024</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>News Website</td>
+          <td>Nextjs</td>
+          <td>01/13/2025</td>
+        </tr>
+      </table>
+    </section>
+    <hr />
 
-            </section>
-            <hr>
+    <section id="blog-section">
+      <h3>My Blogs</h3>
+      <div class="blog-container">
+      <div class="box">
+        <img src="./images/img1.png" alt="MERN Stack" />
+        <h4>MERN Stack</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button class="btn">Learn more</button>
+      </div>
+      <div class="box">
+        <img src="./images/img2.jpeg" alt="Django" />
+        <h4>Python(Django)</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button class="btn">Learn more</button>
+      </div>
+      <div class="box">
+        <img src="./images/img3.png" alt="Figma" />
+        <h4>Figma Design</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <button class="btn">Learn more</button>
+      </div>
+    </div>
+  
+    </section>
+    <hr />
 
-            <section id="blog-section">
-                <h3>My Blogs </h3>
-                <div class="box">
-                    <img src="./images/img1.png" alt="image">
-                    <h4>MERN Stack</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eos dolorum mollitia saepe nulla iure dignissimos quos
-                        sequi sit eligendi explicabo.</p>
-                    <button class="btn">learn more</button>
-                </div>
-                <div class="box">
-                    <img src="./images/img2.jpeg" alt="image">
-                    <h4>Python(Django)</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eos dolorum mollitia saepe nulla iure dignissimos quos
-                        sequi sit eligendi explicabo.</p>
-                    <button class="btn">learn more</button>
-                </div>
-                <div class="box">
-                    <img src="./images/img3.png" alt="image">
-                    <h4>Figma Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eos dolorum mollitia saepe nulla iure dignissimos quos
-                        sequi sit eligendi explicabo.</p>
-                    <button class="btn">learn more</button>
-                </div>
+    <section id="contact-section">
+      <form role="form">
+        <h3>Contact Me</h3>
+        <label for="name">Name:</label>
+        <input type="text" id="name" />
 
-            </section>
-            <hr>
+        <label for="contact">Contact no:</label>
+        <input type="text" id="contact" />
 
-            <section id="contact-section">
+        <label for="email">Email id:</label>
+        <input type="email" id="email" />
 
-                <form role="form">
-                    <h3>Contact Me</h3>
-                    <label for="name" aria-describedby="Your-Name"
-                        aria-label="name">Name:</label>
-                    <input type="text" id="name">
+        <label for="issue">Message:</label>
+        <textarea name="issue" id="issue"></textarea>
 
-                    <label for="contact"
-                        aria-label="contact"
-                        aria-describedby="Your Contact no">Contact no:</label>
-                    <input type="text" id="contact">
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+  </main>
 
-                    <label for="email" aria-describedby="Your email id"
-                        aria-label="email id">Email
-                        id:</label>
-                    <input type="email" id="email">
-
-                    <label for="issue" aria-describedby="your-issues"
-                        aria-label="issue"></label>
-                    <textarea name="issue" id="issue"></textarea>
-
-                    <button type="submit">Submit</button>
-                </form>
-            </section>
-        </main>
-        <footer>&#169; copyrights 2025 Birajgrs. All Rights reserved.</footer>
-
-    </body>
+  <footer>&#169; Copyrights 2025 Birajgrs. All Rights Reserved.</footer>
+</body>
 </html>
